--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@clerk/nextjs": "^5.5.2",
     "@clerk/themes": "^2.1.29",
+    "@livekit/components-react": "^2.6.5",
+    "@livekit/components-styles": "^1.1.3",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
+    "livekit-client": "^2.5.8",
+    "livekit-server-sdk": "^2.7.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.10",
     "next-themes": "^0.3.0",
