--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-table": "^8.20.5",
     "@uidotdev/usehooks": "^2.4.1",
+    "@uploadthing/react": "^7.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -44,6 +46,7 @@
     "svix": "^1.34.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.3.0",
     "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0",
     "zustand": "^5.0.0-rc.2"
